RESOLVED FIXED309146
[JSC] String#replace should not do surrogate-aware advancement for non-unicode regexps
https://bugs.webkit.org/show_bug.cgi?id=309146
Summary [JSC] String#replace should not do surrogate-aware advancement for non-unicod...
Sosuke Suzuki
Reported 2026-03-03 22:50:13 PST
...
Attachments
Sosuke Suzuki
Comment 1 2026-03-03 22:51:26 PST
EWS
Comment 2 2026-03-04 05:22:07 PST
Committed 308626@main (13f7de0a8f94): <https://commits.webkit.org/308626@main> Reviewed commits have been landed. Closing PR #59873 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-04 05:23:12 PST
Note You need to log in before you can comment on or make changes to this bug.